fixed flip card on IOS

--- a/index.css
+++ b/index.css
@@ -73,52 +73,56 @@ main {
   grid-template-columns: 1fr 1fr;
 }
 
+/* flip card */
 .card {
   perspective: 1000px;
-  height: var(--card-height);
   width: var(--card-width);
-  cursor: pointer;
-  transition: 0.3s linear;
+  height: var(--card-height);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   outline: none;
-  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s linear;
+  border-radius: 15px;
   overflow: hidden;
 
   transform: translate(-700px, -700px);
   animation: flyDown 1s ease-in-out forwards;
 }
 
-.card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  /* transform-style: preserve-3d; */
-}
-
-.card-front,
-.card-back {
+.card .front,
+.card .back {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transition: transform 0.6s;
 }
 
 .card-img {
   width: 100%;
   height: 100%;
-  border-radius: 10px;
   object-fit: contain;
 }
 
-.card-back {
+.card .front {
+  transform: rotateY(0deg);
+}
+
+.card .back {
   transform: rotateY(180deg);
 }
 
-.flip {
+.card.flip .front {
   transform: rotateY(180deg);
+}
+
+.card.flip .back {
+  transform: rotateY(0deg);
 }
 
 .card:nth-child(1) {
@@ -214,10 +218,6 @@ main {
 @media screen and (max-width: 480px) {
   .header-title-container .title {
     font-size: 1.7rem;
-  }
-
-  .card-container {
-    row-gap: 1.5rem;
   }
 
   :root {
